kubernetes_deployment/order-api/order-ns.yml
--namespace for all the deployments and services for ordering
apiVersion: v1
kind: Namespace
metadata:
  name: order-ns
  labels:
    name: order-nss
