kubernetes_deployment/order-api/order-api-dp.yml
# deployment of order-api worker, this worker is supposed to be able to access its mongodb database 
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-api-dp
  labels:
    app: order-api
    namespace: order-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-api
  template:
    metadata:
      labels:
        app: order-api
    spec:
      containers:
      - name: order-api
        image: img-reg:5000/order-kuber:dev
        ports:
        - containerPort: 80
          protocol: TCP
