kubernetes_deployment/order-api/order-mongodb-ss.yml
-- statefulset for mongodb
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: order-api-mongodb-ss
  labels:
    app: order-api
    namespace: order-ns
spec:
  replicas: 3
  selector:
    matchLabels:
      app: order-api
  serviceName: order-api-mongodb-svc
  template:
    metadata:
      labels:
        app: order-api
    spec:
      containers:
      - name: mongodb
        image: mongo:latests
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongodb-pv-claim
          mountPath: /data/db
      volumes:
      - name: mongodb-pv-claim
        persistentVolumeClaim:
          claimName: order-api-mongodb-pv-claim
