kubernetes_deployment/order-api/order-api-svc.yml
# service for the order-api-dp
apiVersion: v1
kind: Service
metadata:
  name: order-api-svc
  labels:
    app: order-api
    namespace: order-ns
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
  selector:
    app: order-api
