kubernetes_deployment/order-api/order-mongodb-svc.yml
-- service for mongodb per application only accessible within the same cluster
apiVersion: v1
kind: Service
metadata:
  name: order-api-mongodb-svc
  labels:
    app: order-api
    namespace: order-ns
spec:
  type: ClusterIP
  ports:
  - port: 27017
    targetPort: 27017
  selector:
    app: order-api
